fixed bug one-to-many, swagger.json
